syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.atomic.cloud.grpc.common";

package common;

message CommonServer {
    message List {
        repeated Short servers = 1;
    }
    message Short {
        string name = 1;
        string id = 2;
        optional string group = 3;
        string node = 4;
    }
}